2.8 - Crash when Play Animation in this scene #57360

Closed
opened 2018-10-23 16:12:32 +02:00 by YAFU · 9 comments

System Information
Kubuntu 18.04 - GTX 960

Blender Version
Broken: f22385f28e

Short description of error
This is a well-known scene that was used by someone on YouTube to demonstrate OpenSubdiv operation when it was released (the scene does not use OpenSubdiv anyway):
https://www.blendswap.com/blends/view/73309

Edit: uploaded here (not everyone is a member there)
73309_Hulk___Run_Animation.zip

This is the crash log that I get:

# Blender 2.80 (sub 27), Commit date: 2018-10-23 12:36, Hash f22385f28ec
Tool 'Cursor' not found.  # Warning
Tool 'Cursor' not found.  # Warning
bpy.data.screens["Default"].shading.type = 'RENDERED'  # Property
bpy.data.screens["Default"].shading.type = 'MATERIAL'  # Property

# backtrace
/media/@Blender_Git/build_linux/bin/blender(BLI_system_backtrace+0x33) [0x5574f6e8b543]
/media/@Blender_Git/build_linux/bin/blender(+0x10d9750) [0x5574f63f2750]
/lib/x86_64-linux-gnu/libc.so.6(+0x3ef20) [0x7f60e175af20]
/media/@Blender_Git/build_linux/bin/blender(+0x180412c) [0x5574f6b1d12c]
/media/@Blender_Git/build_linux/bin/blender(+0x180426c) [0x5574f6b1d26c]
/media/@Blender_Git/build_linux/bin/blender(+0x18042d9) [0x5574f6b1d2d9]
/media/@Blender_Git/build_linux/bin/blender(nlastrips_ctime_get_strip+0x6e) [0x5574f6b1fece]
/media/@Blender_Git/build_linux/bin/blender(+0x180786c) [0x5574f6b2086c]
/media/@Blender_Git/build_linux/bin/blender(BKE_animsys_evaluate_animdata+0x22e) [0x5574f6b20efe]
/media/@Blender_Git/build_linux/bin/blender(+0x1b90d20) [0x5574f6ea9d20]
/media/@Blender_Git/build_linux/bin/blender(BLI_task_pool_work_and_wait+0x109) [0x5574f6e8c2a9]
/media/@Blender_Git/build_linux/bin/blender(_ZN3DEG23deg_evaluate_on_refreshEPNS_9DepsgraphE+0x18c) [0x5574f6ea9f4c]
/media/@Blender_Git/build_linux/bin/blender(BKE_scene_graph_update_for_newframe+0x13d) [0x5574f6c4f66d]
/media/@Blender_Git/build_linux/bin/blender(ED_update_for_newframe+0x81) [0x5574f6713a11]
/media/@Blender_Git/build_linux/bin/blender(+0x13fd15d) [0x5574f671615d]
/media/@Blender_Git/build_linux/bin/blender(+0x10de8e4) [0x5574f63f78e4]
/media/@Blender_Git/build_linux/bin/blender(+0x10e1875) [0x5574f63fa875]
/media/@Blender_Git/build_linux/bin/blender(+0x10e1e15) [0x5574f63fae15]
/media/@Blender_Git/build_linux/bin/blender(+0x10e26cc) [0x5574f63fb6cc]
/media/@Blender_Git/build_linux/bin/blender(wm_event_do_handlers+0x870) [0x5574f63fc2c0]
/media/@Blender_Git/build_linux/bin/blender(WM_main+0x20) [0x5574f63f3190]
/media/@Blender_Git/build_linux/bin/blender(main+0x35a) [0x5574f63b116a]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xe7) [0x7f60e173db97]
/media/@Blender_Git/build_linux/bin/blender(_start+0x2a) [0x5574f63eee8a]

Exact steps for others to reproduce the error
Open the scene and Play Animation.

**System Information** Kubuntu 18.04 - GTX 960 **Blender Version** Broken: f22385f28ec **Short description of error** This is a well-known scene that was used by someone on YouTube to demonstrate OpenSubdiv operation when it was released (the scene does not use OpenSubdiv anyway): https://www.blendswap.com/blends/view/73309 Edit: uploaded here (not everyone is a member there) [73309_Hulk___Run_Animation.zip](https://archive.blender.org/developer/F5209197/73309_Hulk___Run_Animation.zip) This is the crash log that I get: ``` # Blender 2.80 (sub 27), Commit date: 2018-10-23 12:36, Hash f22385f28ec Tool 'Cursor' not found. # Warning Tool 'Cursor' not found. # Warning bpy.data.screens["Default"].shading.type = 'RENDERED' # Property bpy.data.screens["Default"].shading.type = 'MATERIAL' # Property # backtrace /media/@Blender_Git/build_linux/bin/blender(BLI_system_backtrace+0x33) [0x5574f6e8b543] /media/@Blender_Git/build_linux/bin/blender(+0x10d9750) [0x5574f63f2750] /lib/x86_64-linux-gnu/libc.so.6(+0x3ef20) [0x7f60e175af20] /media/@Blender_Git/build_linux/bin/blender(+0x180412c) [0x5574f6b1d12c] /media/@Blender_Git/build_linux/bin/blender(+0x180426c) [0x5574f6b1d26c] /media/@Blender_Git/build_linux/bin/blender(+0x18042d9) [0x5574f6b1d2d9] /media/@Blender_Git/build_linux/bin/blender(nlastrips_ctime_get_strip+0x6e) [0x5574f6b1fece] /media/@Blender_Git/build_linux/bin/blender(+0x180786c) [0x5574f6b2086c] /media/@Blender_Git/build_linux/bin/blender(BKE_animsys_evaluate_animdata+0x22e) [0x5574f6b20efe] /media/@Blender_Git/build_linux/bin/blender(+0x1b90d20) [0x5574f6ea9d20] /media/@Blender_Git/build_linux/bin/blender(BLI_task_pool_work_and_wait+0x109) [0x5574f6e8c2a9] /media/@Blender_Git/build_linux/bin/blender(_ZN3DEG23deg_evaluate_on_refreshEPNS_9DepsgraphE+0x18c) [0x5574f6ea9f4c] /media/@Blender_Git/build_linux/bin/blender(BKE_scene_graph_update_for_newframe+0x13d) [0x5574f6c4f66d] /media/@Blender_Git/build_linux/bin/blender(ED_update_for_newframe+0x81) [0x5574f6713a11] /media/@Blender_Git/build_linux/bin/blender(+0x13fd15d) [0x5574f671615d] /media/@Blender_Git/build_linux/bin/blender(+0x10de8e4) [0x5574f63f78e4] /media/@Blender_Git/build_linux/bin/blender(+0x10e1875) [0x5574f63fa875] /media/@Blender_Git/build_linux/bin/blender(+0x10e1e15) [0x5574f63fae15] /media/@Blender_Git/build_linux/bin/blender(+0x10e26cc) [0x5574f63fb6cc] /media/@Blender_Git/build_linux/bin/blender(wm_event_do_handlers+0x870) [0x5574f63fc2c0] /media/@Blender_Git/build_linux/bin/blender(WM_main+0x20) [0x5574f63f3190] /media/@Blender_Git/build_linux/bin/blender(main+0x35a) [0x5574f63b116a] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xe7) [0x7f60e173db97] /media/@Blender_Git/build_linux/bin/blender(_start+0x2a) [0x5574f63eee8a] ``` **Exact steps for others to reproduce the error** Open the scene and Play Animation.
Author

Added subscriber: @YAFU

Added subscriber: @YAFU
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, will have a look...

Confirmed, will have a look...
Sergey Sharybin was assigned by Philipp Oeser 2018-10-24 12:23:37 +02:00
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

OK, so nlastrip_evaluate_controls() creates PointerRNA with NULL ID here -- thats why strip_ptr.id.data is NULL (which wont play nice with animsys_write_orig_anim_rna())

That leads to crash:

1  animsys_write_orig_anim_rna                                                                                                                                           anim_sys.c     1691 0x27d3535      
2  animsys_evaluate_fcurves                                                                                                                                              anim_sys.c     1722 0x27d3677      
3  nlastrip_evaluate_controls                                                                                                                                            anim_sys.c     1888 0x27d3c08      
4  nlastrips_ctime_get_strip                                                                                                                                             anim_sys.c     1987 0x27d3f09      
5  animsys_evaluate_nla                                                                                                                                                  anim_sys.c     2573 0x27d4ff5      
6  animsys_calculate_nla                                                                                                                                                 anim_sys.c     2652 0x27d530d      
7  BKE_animsys_evaluate_animdata                                                                                                                                         anim_sys.c     2740 0x27d5438      
8  BKE_animsys_eval_animdata                                                                                                                                             anim_sys.c     2927 0x27d63e5      
9  std::__invoke_impl<void, void ( *&)(Depsgraph *, ID *), Depsgraph *, ID *&>                                                                                           invoke.h       60   0x2d337bd

P808 prevents the crash and seems to survive, but this is probably something @Sergey should check?

OK, so `nlastrip_evaluate_controls()` creates PointerRNA with NULL ID [here ](https://developer.blender.org/diffusion/B/browse/blender2.8/source/blender/blenkernel/intern/anim_sys.c;f1f0666bfc355fb57ed13c64fe1685664600e583$1885) -- thats why strip_ptr.id.data is NULL (which wont play nice with `animsys_write_orig_anim_rna()`) That leads to crash: ``` 1 animsys_write_orig_anim_rna anim_sys.c 1691 0x27d3535 2 animsys_evaluate_fcurves anim_sys.c 1722 0x27d3677 3 nlastrip_evaluate_controls anim_sys.c 1888 0x27d3c08 4 nlastrips_ctime_get_strip anim_sys.c 1987 0x27d3f09 5 animsys_evaluate_nla anim_sys.c 2573 0x27d4ff5 6 animsys_calculate_nla anim_sys.c 2652 0x27d530d 7 BKE_animsys_evaluate_animdata anim_sys.c 2740 0x27d5438 8 BKE_animsys_eval_animdata anim_sys.c 2927 0x27d63e5 9 std::__invoke_impl<void, void ( *&)(Depsgraph *, ID *), Depsgraph *, ID *&> invoke.h 60 0x2d337bd ``` [P808](https://archive.blender.org/developer/P808.txt) prevents the crash and seems to survive, but this is probably something @Sergey should check?
Member

Added subscriber: @mont29

Added subscriber: @mont29
Member

Another thing I noticed is that you get an assert when reloading trusted (opening with "Trusted Source" is not a problem -- reloading is... as well as opening any other file after this one...)
But that is probably something @mont29 knows more about? Should we open a separate report for this?

1  raise                                                                                                           0x7ffff1c93eab 
2  abort                                                                                                           0x7ffff1c7e5b9 
3  id_us_min                                                                        library.c                 247  0x28b5987      
4  BKE_nlastrip_free                                                                nla.c                     95   0x292ae90      
5  BKE_nlatrack_free                                                                nla.c                     128  0x292af2b      
6  BKE_nla_tracks_free                                                              nla.c                     152  0x292afb8      
7  BKE_animdata_free                                                                anim_sys.c                249  0x27cf4f6      
8  BKE_object_free                                                                  object.c                  558  0x294233e      
9  BKE_libblock_free_datablock                                                      library_remap.c           710  0x28d0943      
10 DEG::deg_free_copy_on_write_datablock                                            deg_eval_copy_on_write.cc 1004 0x2d45404      
11 DEG::IDDepsNode::destroy                                                         deg_node_id.cc            161  0x2d4ac5b      
12 DEG::Depsgraph::clear_id_nodes_conditional(std::function<bool (ID_Type)> const&) depsgraph.cc              345  0x2d17566      
13 DEG::Depsgraph::clear_id_nodes                                                   depsgraph.cc              356  0x2d17613      
14 DEG::Depsgraph::~Depsgraph                                                       depsgraph.cc              108  0x2d16c56      
15 DEG_graph_free                                                                   depsgraph.cc              577  0x2d18193      
16 depsgraph_key_value_free                                                         scene.c                   2057 0x29aab70      
17 ghash_free_cb                                                                    BLI_ghash.c               650  0x2c91189      
18 BLI_ghash_free                                                                   BLI_ghash.c               1016 0x2c92a05      
19 BKE_scene_free_depsgraph_hash                                                    scene.c                   2079 0x29aac12      
20 BKE_scene_free_ex                                                                scene.c                   500  0x29a6e22      
21 BKE_libblock_free_datablock                                                      library_remap.c           704  0x28d0921      
22 BKE_libblock_free_ex                                                             library_remap.c           928  0x28d0f58      
23 BKE_main_free                                                                    library.c                 1548 0x28bc903      
24 BKE_blender_globals_clear                                                        blender.c                 149  0x27e1ec7      
25 setup_app_data                                                                   blendfile.c               235  0x27e38ee      
26 BKE_blendfile_read                                                               blendfile.c               402  0x27e3edf      
27 WM_file_read                                                                     wm_files.c                594  0x1a11439      
28 wm_file_read_opwrap                                                              wm_files.c                1818 0x1a14014      
29 wm_revert_mainfile_exec                                                          wm_files.c                1982 0x1a14693      
30 wm_operator_invoke                                                               wm_event_system.c         1333 0x1a08620      
31 wm_operator_call_internal                                                        wm_event_system.c         1530 0x1a08ca9      
32 WM_operator_name_call_ptr                                                        wm_event_system.c         1578 0x1a08ecc      
33 ui_apply_but_funcs_after                                                         interface_handlers.c      767  0x1d24fff      
34 ui_popup_handler                                                                 interface_handlers.c      9877 0x1d3d118      
35 wm_handler_ui_call                                                               wm_event_system.c         569  0x1a065f9      
36 wm_handlers_do_intern                                                            wm_event_system.c         2386 0x1a0afc3      
37 wm_handlers_do                                                                   wm_event_system.c         2619 0x1a0b8dc      
38 wm_event_do_handlers                                                             wm_event_system.c         2988 0x1a0cab8      
39 WM_main                                                                          wm.c                      412  0x1a020ce      
40 main                                                                             creator.c                 525  0x19fceec      
Another thing I noticed is that you get an assert when **reloading** trusted (opening with "Trusted Source" is not a problem -- reloading is... as well as opening any other file after this one...) But that is probably something @mont29 knows more about? Should we open a separate report for this? ``` 1 raise 0x7ffff1c93eab 2 abort 0x7ffff1c7e5b9 3 id_us_min library.c 247 0x28b5987 4 BKE_nlastrip_free nla.c 95 0x292ae90 5 BKE_nlatrack_free nla.c 128 0x292af2b 6 BKE_nla_tracks_free nla.c 152 0x292afb8 7 BKE_animdata_free anim_sys.c 249 0x27cf4f6 8 BKE_object_free object.c 558 0x294233e 9 BKE_libblock_free_datablock library_remap.c 710 0x28d0943 10 DEG::deg_free_copy_on_write_datablock deg_eval_copy_on_write.cc 1004 0x2d45404 11 DEG::IDDepsNode::destroy deg_node_id.cc 161 0x2d4ac5b 12 DEG::Depsgraph::clear_id_nodes_conditional(std::function<bool (ID_Type)> const&) depsgraph.cc 345 0x2d17566 13 DEG::Depsgraph::clear_id_nodes depsgraph.cc 356 0x2d17613 14 DEG::Depsgraph::~Depsgraph depsgraph.cc 108 0x2d16c56 15 DEG_graph_free depsgraph.cc 577 0x2d18193 16 depsgraph_key_value_free scene.c 2057 0x29aab70 17 ghash_free_cb BLI_ghash.c 650 0x2c91189 18 BLI_ghash_free BLI_ghash.c 1016 0x2c92a05 19 BKE_scene_free_depsgraph_hash scene.c 2079 0x29aac12 20 BKE_scene_free_ex scene.c 500 0x29a6e22 21 BKE_libblock_free_datablock library_remap.c 704 0x28d0921 22 BKE_libblock_free_ex library_remap.c 928 0x28d0f58 23 BKE_main_free library.c 1548 0x28bc903 24 BKE_blender_globals_clear blender.c 149 0x27e1ec7 25 setup_app_data blendfile.c 235 0x27e38ee 26 BKE_blendfile_read blendfile.c 402 0x27e3edf 27 WM_file_read wm_files.c 594 0x1a11439 28 wm_file_read_opwrap wm_files.c 1818 0x1a14014 29 wm_revert_mainfile_exec wm_files.c 1982 0x1a14693 30 wm_operator_invoke wm_event_system.c 1333 0x1a08620 31 wm_operator_call_internal wm_event_system.c 1530 0x1a08ca9 32 WM_operator_name_call_ptr wm_event_system.c 1578 0x1a08ecc 33 ui_apply_but_funcs_after interface_handlers.c 767 0x1d24fff 34 ui_popup_handler interface_handlers.c 9877 0x1d3d118 35 wm_handler_ui_call wm_event_system.c 569 0x1a065f9 36 wm_handlers_do_intern wm_event_system.c 2386 0x1a0afc3 37 wm_handlers_do wm_event_system.c 2619 0x1a0b8dc 38 wm_event_do_handlers wm_event_system.c 2988 0x1a0cab8 39 WM_main wm.c 412 0x1a020ce 40 main creator.c 525 0x19fceec ```

This issue was referenced by 61d49d3448

This issue was referenced by 61d49d3448bbe6ea1c7dc8902c83e63757edc734

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57360
No description provided.